manifests/prodlab/apis/bierzee-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bierzee-v2-api
  namespace: prodlab
  labels:
    app.kubernetes.io/name: bierzee-v2-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bierzee-v2-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bierzee-v2-api
    spec:
      automountServiceAccountToken: false
      containers:
      - name: bierzee-v2-api
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/bierzee-server:v2
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
        ports:
        - containerPort: 8080
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: bierzee-v2-api
  namespace: prodlab
spec:
  selector:
    app.kubernetes.io/name: bierzee-v2-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bierzee-v2-api
  namespace: prodlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-array21"

spec:
  tls:
  - hosts:
    - bierzee-v2.k8s.array21.dev
    secretName: bierzee-v2-k8s-array21-tls
  rules:
  - host: bierzee-v2.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bierzee-v2-api
            port:
              number: 8080
