manifests/prodlab/apis/plugin-stat-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugin-stat-server
  namespace: prodlab
  labels:
    app: plugin-stat-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plugin-stat-server
  template:
    metadata:
      labels:
        app: plugin-stat-server
    spec:
      containers:
      - name: plugin-stat-server
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/plugin-stat-server:v2
        ports:
        - containerPort: 8080
<<<<<<< HEAD
=======
>>>>>>> 3ee5a24919bec91caadf6de2efdf817cf4769e49
---
apiVersion: v1
kind: Service
metadata:
  name: plugin-stat-server
  namespace: prodlab
spec:
  selector:
    app: plugin-stat-server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plugin-stat-server
  namespace: prodlab
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-array21
spec:
  tls:
  - hosts:
<<<<<<< HEAD
    - plugin-stat.k8s.array21.dev
    secretName: plugin-stat-k8s-array21-dev
=======
    - plugin-stats.k8s.array21.dev
    secretName: plugin-stats-k8s-array21-dev
>>>>>>> 3ee5a24919bec91caadf6de2efdf817cf4769e49
  rules:
  - host: plugin-stat.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plugin-stat-server
            port:
              number: 8080
